--- a/roles/kibana/server/templates/kibana.yml.j2
+++ b/roles/kibana/server/templates/kibana.yml.j2
@@ -8,7 +8,7 @@ server.host: "{{ kibana_server_bind }}"
 
 # If you are running kibana behind a proxy, and want to mount it at a path,
 # specify that path here. The basePath can't end in a slash.
-# server.basePath: ""
+server.basePath: "{{ kibana_path }}"
 
 # The maximum payload size in bytes on incoming server requests.
 # server.maxPayloadBytes: 1048576
